--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.9.0/css/all.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Movies</title>
+	<title>Giphy Search</title>
 </head>
 <body>
 	<main class="main-content">
